--- a/src/sass/dashboard/placeholder.scss
+++ b/src/sass/dashboard/placeholder.scss
@@ -60,7 +60,7 @@
 }
 
 .alert { margin-left: auto; }
-.profile, .logo { display: none; @media #{$tablet} { display: flex; } }
+.profile, .logo, .header-nav { display: none; @media #{$tablet} { display: flex; } }
 .mobile-sidebar--button { display: flex; @media #{$tablet} { display: none; } }
 
 
@@ -73,6 +73,7 @@
 
   &::after {
   	content: "";
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
   	width: 100%;
   	height: $header-height;
     background-image: $header-gradient;
@@ -91,6 +92,7 @@
     ul {
       list-style-type: none;
       margin: 0;
+      padding: 0;
       li {
         display: inline-block;
         margin-right: auto;
@@ -119,6 +121,8 @@
 }
 
 .sub-nav {
+  height: calc(#{$header-height} / 2);
+
   position: fixed;
   top: $header-height;
 
@@ -126,20 +130,19 @@
   margin: auto;
 
   overflow: hidden;
-  z-index: 3;
+  // z-index: 3;
   display: flex;
-  align-items: left;
+  align-items: center;
   // padding: $header-padding;
   position: fixed;
   grid-column: 1 / -1;
   left: 0;
   right: 0;
   clear: both;/*fallback*/
-  // height: calc(#{$header-height} / 2);
-  // max-height: calc(#{$header-height} / 2);
 
   &::after {
   	content: "";
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
   	width: 100%;
   	height: calc(#{$header-height} / 2);
     background-color: $white;
@@ -157,13 +160,13 @@
       margin-right: auto;
 
       margin: 0 1rem;
-      height: 100%;
+      // height: 100%;//add this back for fun growing containers!
       max-width: 5rem;
       align-items: center;
 
       a {
         width: 100%;
-        height: 100%;
+        // height: 100%;
         display: flex;
         align-items: center;
         color: $gray-900;
