--- a/src/sass/dashboard/sidebar.scss
+++ b/src/sass/dashboard/sidebar.scss
@@ -93,7 +93,7 @@ $animation-time: 0.3s;
   width: 3rem;
   height: 3rem;
   border-radius: 5px;
-  background-color: #413552;
+  background-color: $container-colors;
 
   @extend %icon-white;
 }
