- clean the sub-nav and files so that the version 2 header is more isolated

--- a/src/sass/dashboard/placeholder.scss
+++ b/src/sass/dashboard/placeholder.scss
@@ -1,6 +1,7 @@
-//Placeholder Header Elements
+//This file is for small elements that have not yet been approved
+//but needed to be represented visually
+
 .logo {
-  // margin-right: auto;
   width: 10.75rem;
   height: 4rem;
   background-color: $container-colors;
@@ -62,121 +63,3 @@
 .alert { margin-left: auto; }
 .profile, .logo, .header-nav { display: none; @media #{$tablet} { display: flex; } }
 .mobile-sidebar--button { display: flex; @media #{$tablet} { display: none; } }
-
-
-
-
-
-
-//New stuff for navigation in the header
-.header-v2 {
-
-  &::after {
-  	content: "";
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-  	width: 100%;
-  	height: $header-height;
-    background-image: $header-gradient;
-  	position: fixed;
-  	top: 0;
-  	left: 0;
-  	z-index: -1;
-  }
-
-  span:last-of-type {//title thing
-    margin-right: auto;
-  }
-
-  .header-nav {
-    margin-right: auto;
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      li {
-        display: inline-block;
-        margin-right: auto;
-
-        margin: 0 1rem;
-        height: 2.5rem;
-        max-width: 5rem;
-        align-items: center;
-
-        a {
-          width: 100%;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          color: $gray-100;
-          font-weight: 400;
-          font-size: 1.1rem;
-
-          border-bottom: 2px solid transparent;
-          &:hover  { border-bottom: 3px solid $gray-100; }
-          &.active { border-bottom: 3px solid $gray-100; }
-        }
-      }
-    }
-  }
-}
-
-.sub-nav {
-  height: calc(#{$header-height} / 2);
-
-  position: fixed;
-  top: $header-height;
-
-  max-width: $content-width;
-  margin: auto;
-
-  overflow: hidden;
-  // z-index: 3;
-  display: flex;
-  align-items: center;
-  // padding: $header-padding;
-  position: fixed;
-  grid-column: 1 / -1;
-  left: 0;
-  right: 0;
-  clear: both;/*fallback*/
-
-  &::after {
-  	content: "";
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-  	width: 100%;
-  	height: calc(#{$header-height} / 2);
-    background-color: $white;
-  	position: fixed;
-  	top: $header-height;
-  	left: 0;
-  	z-index: -1;
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    li {
-      display: inline-block;
-      margin-right: auto;
-
-      margin: 0 1rem;
-      // height: 100%;//add this back for fun growing containers!
-      max-width: 5rem;
-      align-items: center;
-
-      a {
-        width: 100%;
-        // height: 100%;
-        display: flex;
-        align-items: center;
-        color: $gray-900;
-        font-weight: 400;
-        font-size: 1rem;
-
-        border-bottom: 2px solid transparent;
-        &:hover  { border-bottom: 3px solid $gray-900; }
-        &.active { border-bottom: 3px solid $gray-900; }
-      }
-    }
-  }
-}
