--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -10,7 +10,7 @@ $global-content-width: 800px !default;
 $sidebar-width:  13rem;
 
 body {
-  background-color: $white;
+  // background-color: $white;
 }
 
 //Give example pages gray background
