--- a/src/sass/experimental/nav-header.scss
+++ b/src/sass/experimental/nav-header.scss
@@ -88,21 +88,29 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   right: 0;
   clear: both;/*fallback*/
 
+  z-index: 0;
+
   &::after {
   	content: "";
     box-shadow: $header-shadow;
   	width: 100%;
   	height: calc(#{$header-height} / 2);
     background-color: $sub-nav-color;
+    // background-image: $header-gradient;
   	position: fixed;
   	top: $header-height;
   	left: 0;
   	z-index: -1;
   }
 
+  ul, li, a {
+    height: 100%;
+  }
+
   ul {
     list-style-type: none;
     margin: 0;
+
     li {
       display: inline-block;
       margin-right: auto;
