- add spacing classes

--- a/src/sass/experimental/nav-header.scss
+++ b/src/sass/experimental/nav-header.scss
@@ -110,6 +110,7 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   ul {
     list-style-type: none;
     margin: 0;
+    padding: 0;
 
     li {
       display: inline-block;
