--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -66,6 +66,9 @@ fieldset {
 
   select {
     cursor: pointer;
+    .grid & {
+      width: 100%; //needed to support css-grid
+    }
   }
 
   //Add class to containing fieldset or div to display a button
@@ -76,8 +79,8 @@ fieldset {
     .add-on--before,
     .add-on--after {
       width: 5rem; //set to fix forms escaping from headers on mobile
-      @media #{$tablet} { 
-        width: auto; 
+      @media #{$tablet} {
+        width: auto;
       }
       flex-grow: 1;
     }
@@ -127,6 +130,13 @@ fieldset {
       pointer-events: none;
       position: absolute;
       right: 2rem; bottom: calc(#{$grid-gutter} * 2);
+    }
+
+    .grid & { //supports select positioning in grid
+      &:after {
+        right: 1rem;
+        bottom: 2rem;
+      }
     }
 
     &.has-error:after { color: $red-400; }
