added margin-auto to spacing utility

--- a/src/sass/experimental/spacing.scss
+++ b/src/sass/experimental/spacing.scss
@@ -29,11 +29,12 @@ $spaceamounts: (
 );
 
 $sides: (
-  "": "all",
-  "t": "top",
-  "b": "bottom",
-  "l": "left",
-  "r": "right",
+  "":     "all",
+  "t":    "top",
+  "b":    "bottom",
+  "l":    "left",
+  "r":    "right",
+  "auto": "auto",
 );
 
 @each $space, $space-variable in $spaceamounts {
