--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -7,6 +7,8 @@ $global-content-width: 800px !default;
 @import 'prism';
 @import 'example-css-grid';
 
+@import 'sign-up-custom';
+
 $sidebar-width:  13rem;
 
 body {
