--- a/src/sass/example-page/sign-up-custom.scss
+++ b/src/sass/example-page/sign-up-custom.scss
@@ -17,3 +17,32 @@
     width: 100%;
   }
 }
+
+.membershipStartDate {
+  width: calc(100% - 3rem;);
+  margin-bottom: $space-m;
+  @media #{$tablet} { width: 12rem; }
+  &:after {
+     right: -2rem !important;
+     bottom: 1rem !important;
+  }
+}
+
+.signUpHeader {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  max-height: 5rem;
+
+  &::after {
+  	content: "";
+    box-shadow: $header-shadow;
+  	width: 100%;
+  	height: 5rem;
+    background-image: linear-gradient(100deg, $white, $white);
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	z-index: -1;
+  }
+}
