--- a/src/sass/dashboard/sidebar.scss
+++ b/src/sass/dashboard/sidebar.scss
@@ -165,7 +165,7 @@ $animation-time: 0.3s;
   .mobile-profile--account { display: grid; }
 }
 
-.map {
+.map { //TODO rename this
   .sidebar {
     left: auto;
     right: 0;
