comment out overflow hidden for safari

--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -19,7 +19,7 @@ $full-padding: $grid-gutter;//1rem;
 
 //Theme
 .header {
-  overflow: hidden;
+  // overflow: hidden;
   z-index: 3;
   display: flex;
   align-items: center;
