--- a/src/sass/experimental/nav-header.scss
+++ b/src/sass/experimental/nav-header.scss
@@ -79,7 +79,7 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   max-width: $content-width;
   margin: auto;
 
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   align-items: center;
   position: fixed;
