--- a/src/sass/experimental/nav-header.scss
+++ b/src/sass/experimental/nav-header.scss
@@ -88,6 +88,8 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   right: 0;
   clear: both;/*fallback*/
 
+  width: 100%;
+
   z-index: 0;
 
   &::after {
