--- a/src/sass/experimental/spacing.scss
+++ b/src/sass/experimental/spacing.scss
@@ -6,7 +6,7 @@ _______   _______ ___________ ________  ________ _   _ _____ ___  _
 | |___/ /^\ \ |   | |___| |\ \ _| |_| |  | | |___| |\  | | || | | | |____
 \____/\/   \|_|   \____/\_| \_|\___/\_|  |_|____/\_| \_/ \_/\_| |_|_____/
 
-This is an EXPERIMENT and is in no way ready to be included in production!
+This is an EXPERIMENT and is not ready to be included in production!
 */
 
 $space-xxs: 0.25rem;
