--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -21,6 +21,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 $sub-nav-height: calc(#{$header-height} / 2);
 $sub-nav-color: $white;
 $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
+$header-background: $white;
 
 //Theme
 .header {
@@ -28,12 +29,10 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   display: flex;
   align-items: center;
   padding: $header-padding;
-  position: relative;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  clear: both;/*fallback*/
   height: $header-height;
   max-height: $header-height;
 
@@ -52,10 +51,6 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
   	top: 0;
   	left: 0;
   	z-index: -1;
-  }
-
-  span:last-of-type {//title thing
-    margin-right: auto;
   }
 
   .header-nav {
@@ -89,9 +84,6 @@ $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
       }
     }
   }
-
-  .title, .spacer { display: none; }//hidden unless "fullscreen" is applied
-
 }
 
 .app { //TODO rename this(?)
