--- a/src/sass/dashboard/placeholder.scss
+++ b/src/sass/dashboard/placeholder.scss
@@ -1,6 +1,9 @@
 //This file is for small elements that have not yet been approved
 //but needed to be represented visually
 
+//VARIABLES
+$container-colors: transparent;//#413552
+
 .logo {
   width: 10.75rem;
   height: 4rem;
