--- a/src/sass/dashboard/sidebar.scss
+++ b/src/sass/dashboard/sidebar.scss
@@ -1,7 +1,11 @@
-//Note: This contains classes for a mobile menu as well as the legacy sidebar. 
+//Note: This contains classes for a mobile menu as well as the legacy sidebar.
 
 //Variables
 $animation-time: 0.3s;
+$sidebar-highlight:  #9D6CDE;
+$sidebar-text-color: $white;
+$sidebar-width: 12rem;
+$sidebar-background: #354052;
 
 //SIDEBAR
 
