--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -32,6 +32,8 @@ fieldset {
     max-width: 100%;
     padding: 0.6rem;
     width: 100%;
+    //Experimental
+    // margin-bottom: $space-m;
 
     &:focus {
       border-color: $blue;
