--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -1,5 +1,68 @@
 /* Core Utility Classes
   =========================================================================== */
+//content width
+$content-s:     350px;
+$content-m:     600px;
+$content-l:     1200px;
+$content-full:  auto;
+
+$widths: (
+  "-s":     #{$content-s},
+  "-m":     #{$content-m},
+  "-l":     #{$content-l},
+  "-full":  "auto",
+);
+
+@each $width, $width-var in $widths {
+  $max-width: if($width == '', '', #{$width-var});
+  .content#{$width} { //.content-s
+    max-width: #{$max-width}; //max-width: 350px;
+  }
+}
+
+//Spacing
+$space-xxs: 0.25rem;
+$space-xs:  0.5rem;
+$space-s:   0.75rem;
+$space-m:   1rem;
+$space-l:   1.5rem;
+$space-xl:  2rem;
+$space-xxl: 3rem;
+
+//SPACING UTILITY
+$spaceamounts: (
+  "space-xxs":  #{$space-xxs},
+  "space-xs":   #{$space-xs},
+  "space-s":    #{$space-s},
+  "space-m":    #{$space-m},
+  "space-l":    #{$space-l},
+  "space-xl":   #{$space-xl},
+  "space-xxl":  #{$space-xxl},
+);
+
+$sides: (
+  "":     "all",
+  "t":    "top",
+  "b":    "bottom",
+  "l":    "left",
+  "r":    "right",
+  "auto": "auto",
+);
+
+@each $space, $space-variable in $spaceamounts {
+  $space-var: if($space == '', '', #{$space-variable});
+
+  @each $prefix, $value in $sides {
+    $property: if($prefix == '', '', -#{$value});
+    .m#{$prefix}-#{$space} { //.mb-space-xs
+      margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;
+    }
+
+    .p#{$prefix}-#{$space} { //.p-space-m
+      padding#{$property}: #{$space-var} !important; //padding: space-m;
+    }
+  }
+}
 
 .hide, .hidden, .is-hidden { display: none !important; }
 
