--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -15,7 +15,7 @@ $full-padding: $grid-gutter;//1rem;
 $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 $sub-nav-height: calc(#{$header-height} / 2);
 $sub-nav-color: $white;
-$header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
+$header-gradient: linear-gradient(100deg, #72569b, #28336d);
 $header-background: $white;
 
 //Theme
